# mu-refreshy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build-test-coverage.yml
cmake/: FindFakeIt.cmake  FindMusicBrainz5.cmake  FindPugiXML.cmake  FindTagLib.cmake
include/: allfilescan.h  artist.h  artistalbumfilescan.h  artistfilescan.h  date.h  filescanfactory.h  ifilescan.h  musicdb.h  pool.h  release.h  storage.h
include/data/: artist.h  artistfactory.h  date.h  release.h  releasefactory.h
include/filescan/: allfilescan.h  artistalbumfilescan.h  artistfilescan.h  filescanfactory.h  ifilescan.h
include/storage/: musicdb.h  storage.h
include/storage/printer/: iprinter.h  printerfactory.h  text.h  xml.h
include/storage/reader/: ireader.h  xml.h
include/storage/remote/: imusicbrainz.h  iremote.h  musicbrainz.h
include/test/: defines.h
include/thread/: pool.h
src/: allfilescan.cpp  artist.cpp  artistalbumfilescan.cpp  artistfilescan.cpp  date.cpp  filescanfactory.cpp  murefreshy.cpp  musicdb.cpp  pool.cpp  release.cpp  storage.cpp
src/data/: artist.cpp  artistfactory.cpp  date.cpp  release.cpp  releasefactory.cpp
src/filescan/: allfilescan.cpp  artistalbumfilescan.cpp  artistfilescan.cpp  filescanfactory.cpp
src/storage/: musicdb.cpp  storage.cpp
src/storage/printer/: printerfactory.cpp  text.cpp  xml.cpp
src/storage/reader/: xml.cpp
src/storage/remote/: musicbrainz.cpp
src/thread/: pool.cpp
tests/data/: artist.cpp  artistfactory.cpp  date.cpp  release.cpp  releasefactory.cpp
tests/filescan/: allfilescan.cpp  artistalbumfilescan.cpp  artistfilescan.cpp  filescanfactory.cpp
tests/storage/: musicdb.cpp  storage.cpp
tests/storage/printer/: printerfactory.cpp  text.cpp  xml.cpp
tests/storage/reader/: xml.cpp
tests/storage/remote/: musicbrainz.cpp
tests/thread/: pool.cpp
